# ai-backend-integration-python

./: .env.example  .gitignore  pyproject.toml
app/: dependencies.py  main.py  schemas.py
app/routers/: chat_crew.py  chat_langchain.py  chat_rag.py  ingest.py
tests/: test_health.py
